# aosp-analyzer

./: .gitignore  Cargo.toml  README.md  analyze.sh  download.sh  sample-stat.json
src/: counter.rs  file_stats.rs  lang_stats.rs  language.rs  main.rs  scanner.rs
visualizer/: .gitignore  Cargo.toml  core_lange_percent.json
visualizer/src/: extractor.rs  format.rs  main.rs  outputs.rs  parser.rs
visualizer/src/outputs/: lang_percent.rs
website/: index.html
