[package]
name = "source_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6.4"
jwalk = "0.8.1"
once_cell = "1.19.0"
peak_alloc = "0.2.1"
rayon = "1.10.0"
regex = "1.10.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
